# hypercore-power-manager

./: .gitignore  README.md  config.example.yaml  hypercore-power-manager.service  pyproject.toml
scripts/: install.sh
src/hypercore_power_manager/: __init__.py  __main__.py  config.py  hypercore_client.py  ipmi_client.py  monitor.py  nut_client.py  state.py
tests/: test_config.py  test_hypercore_client.py  test_init.py  test_ipmi_client.py  test_monitor.py  test_nut_client.py  test_state.py
